# skills

./: .editorconfig  .gitignore  .pre-push  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILLS.md  eslint.config.js  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  skills-catalog.json  test-server.py  tsconfig.build.json  tsconfig.json  tsconfig.test.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: build-upload.yml  validate-skills.yml
.husky/: pre-push
dev/catalog/: build_catalog.py
dev/harness/: mock_context.py  runner.py
dev/runtime/: server.py
dev/scaffold/: new_skill.py
dev/security/: scan_secrets.py
dev/test-harness/: README.md  bootstrap-live.ts  bootstrap-node.ts  bootstrap.ts  live-runner-node.ts  live-runner.ts  mock-db.ts  mock-state.ts  model-bridge.ts  model-worker.mjs  persistent-data.ts  persistent-db.ts  persistent-state.ts  persistent-store.ts  repl-node.ts  runner-node.ts  runner.ts  tdlib-bridge.ts
dev/types/: setup_types.py  skill_types.py  trigger_types.py
dev/utils/: conditions.py
dev/validate/: validator.py
docs/: SKILL_SPEC.md
examples/kitchen-sink/: skill.py
scripts/: analyze-and-split.py  analyze.py  bundle-skills.mjs  bundle-telegram.mjs  check_python_syntax.py  debug-graph.py  download-model.mjs  install-skill-deps.mjs  scan-secrets.mjs  split.py  strip-exports.mjs  test-entities.py  test-harness.mjs  test-js.sh  test-model.mjs  test-server.py  test-setup.py  test-sync.py  update-catalog.py  validate.mjs  watch-build.mjs
scripts/examples/: test-debug.js  test-options-flow.js  test-ping-flow.js  test-setup-flow.js  test-simple-skill.js  test-simple.js  test-telegram-flow.ts  test-telegram-live.js  test-telegram-setup.js
scripts/polyfills/: async-mutex.js  big-integer.js  buffer-inject.js  buffer.js  crypto.js  cryptography-aes.js  events.js  fs.js  htmlparser2.js  mime.js  net.js  node-localstorage.js  os.js  pako.js  path.js  platform.js  socks.js  store2.js  stream.js  tls.js  ts-custom-error.js  util.js  websocket.js
skills-py/: __init__.py
skills-py/browser/: README.md  __init__.py  __main__.py  manifest.json  (+6 more)
src/: types.d.ts
types/: globals.d.ts  gmail-globals.d.ts  skill.d.ts
(+679 files in other folders)
